Pollus.Emscripten/WGPU/WGPUBrowserNative.cs

namespace Pollus.Emscripten;

using System.Runtime.InteropServices;
using Silk.NET.WebGPU;

public static class WGPUBrowserNative
{
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCreateInstance")]
    extern public static unsafe Instance* CreateInstance(InstanceDescriptor* descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuCreateInstance")]
    extern public static unsafe Instance* CreateInstance(in InstanceDescriptor descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuGetProcAddress")]
    extern public static unsafe PfnProc GetProcAddress(Device* device, byte* procName);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuGetProcAddress")]
    extern public static unsafe PfnProc GetProcAddress(Device* device, in byte procName);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuGetProcAddress")]
    extern public static unsafe PfnProc GetProcAddress(Device* device, [MarshalAs(UnmanagedType.LPUTF8Str)] string procName);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuAdapterEnumerateFeatures")]
    extern public static unsafe nuint AdapterEnumerateFeatures(Adapter* adapter, FeatureName* features);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuAdapterEnumerateFeatures")]
    extern public static unsafe nuint AdapterEnumerateFeatures(Adapter* adapter, ref FeatureName features);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuAdapterGetLimits")]
    extern public static unsafe bool AdapterGetLimits(Adapter* adapter, SupportedLimits* limits);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuAdapterGetLimits")]
    extern public static unsafe bool AdapterGetLimits(Adapter* adapter, ref SupportedLimits limits);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuAdapterGetProperties")]
    extern public static unsafe void AdapterGetProperties(Adapter* adapter, AdapterProperties* properties);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuAdapterGetProperties")]
    extern public static unsafe void AdapterGetProperties(Adapter* adapter, ref AdapterProperties properties);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuAdapterHasFeature")]
    extern public static unsafe bool AdapterHasFeature(Adapter* adapter, FeatureName feature);

    [DllImport("__Internal_emscripten", EntryPoint = "wgpuAdapterRequestDevice")]
    extern public static unsafe void AdapterRequestDevice(Adapter* adapter, WGPUDeviceDescriptor_Browser* descriptor, nint callback, void* userdata);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuAdapterRequestDevice")]
    extern public static unsafe void AdapterRequestDevice(Adapter* adapter, in WGPUDeviceDescriptor_Browser descriptor, nint callback, void* userdata);
